force-app/main/default/objects/Oportunidad__c/Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Oportunidad</label>
    <nameField>
        <label>Oportunidad Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oportunidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>