force-app/main/default/objects/Oportunidad__c/fields/CuentaRelacion__c.field-meta.xml
<CustomField>
    <fullName>CuentaRelacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CuentaRelacion</label>
    <referenceTo>Cuenta__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>