force-app/main/default/objects/Oportunidad__c/fields/DescuentoTotal__c.field-meta.xml
<CustomField>
    <fullName>DescuentoTotal__c</fullName>
    <label>Descuento total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>