force-app/main/default/objects/Oportunidad__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierta</fullName>
            </value>
            <value>
                <fullName>Cerrada - Ganada</fullName>
            </value>
            <value>
                <fullName>Cerrada - Perdida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>