force-app/main/default/objects/Oportunidad__c/fields/FormaPago__c.field-meta.xml
<CustomField>
    <fullName>FormaPago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Al contado</fullName>
            </value>
            <value>
                <fullName>Factura 90 días</fullName>
            </value>
            <value>
                <fullName>Factura 60 días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>