force-app/main/default/objects/Oportunidad__c/fields/MotivoPerdida__c.field-meta.xml
<CustomField>
    <fullName>MotivoPerdida__c</fullName>
    <label>Motivo de perdida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>