force-app/main/default/objects/Oportunidad__c/validationRules/parte2.validationRule-meta.xml
<ValidationRule>
    <fullName>parte2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Etapa__c, &quot;Cerrada - Ganada&quot;),
  ISCHANGED(Etapa__c)
)</errorConditionFormula>
    <errorMessage>Una vez que la oportunidad esté en estado &apos;Cerrada - Ganada&apos;, no puede ser modificada.</errorMessage>
</ValidationRule>