force-app/main/default/objects/Oportunidad__c/validationRules/verific.validationRule-meta.xml
<ValidationRule>
    <fullName>verific</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Etapa__c, &quot;Cerrada - Perdida&quot;),
  ISBLANK(MotivoPerdida__c)
)</errorConditionFormula>
    <errorMessage>Debe indicar el motivo de pérdida cuando la etapa sea Cerrada - Perdida.</errorMessage>
</ValidationRule>